--- a/application/templates/tanks.html
+++ b/application/templates/tanks.html
@@ -18,7 +18,7 @@
 	<br>
 	<div class="form-group">
 	    {{ form.description.label }}
-	    {{ form.decription }}
+	    {{ form.description }}
 	    {% if form.description.errors %}
 	    <div class="error">
 	        {% for error in form.description.errors %}
