--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,7 +9,7 @@
 <a href="{{ url_for('register') }}">Register</a>
 {% if current_user.is_authenticated  %}
 <a href="{{ url_for('tanks') }}">Tanks</a>
-<a href="{{ url_for('tests') }}">Tests</a>
+<!--<a href="{{ url_for('tests') }}">Tests</a>-->
 <a href="{{ url_for('account') }}">Account Update</a>
 <a href="/logout">Logout</a>
 {% else %}
