--- a/application/templates/tanks.html
+++ b/application/templates/tanks.html
@@ -10,7 +10,9 @@
 		{{ form.description.label }}
 		{{ form.description }}
 		<br>
-		{{ form.submit }}
+		<div class='form_group'>
+			{{ form.submit }}
+		</div>
 	</form>
 </div>
 {% endblock %}
