--- a/application/templates/tanks.html
+++ b/application/templates/tanks.html
@@ -6,7 +6,7 @@
 		{{ form.hidden_tag() }}
 		{{ form.name.label }}
 		{{ form.name }}
-		{% if form.first_name.errors %}
+		{% if form.name.errors %}
 		<div class="error">
 			{% for error in form.name.errors %}
 			<span>{{ error }}</span>
