--- a/application/templates/tanks.html
+++ b/application/templates/tanks.html
@@ -17,6 +17,14 @@
 		{{ form.description.label }}
 		{{ form.description }}
 		<br>
+		{{ form.ammonia.label }}
+		{{ form.ammonia }}
+		<br>
+		{{ form.nitrate.label }}
+		{{ form.nitrate }}
+		<br>
+		{{ form.nitrite.label }}
+		{{ form.nitrite }}
 		<div class='form_group'>
 			{{ form.submit }}
 		</div>
