--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -5,9 +5,9 @@
 <div>
     <h3>{{ tank.name }}</h3>
     <span>test by <i>{{ user.first_name }} {{ user.last_name }}</i></span>
-    <span>Ammonia <i>{{ test.ammonia }}</i></span>
-    <span>Nitrite <i>{{ test.nitrite }}</i></span>
-    <span>Nitrate <i>{{ test.nitrate }}</i></span>
+    <span>Ammonia <i>{{ tank.ammonia }}</i></span>
+    <span>Nitrite <i>{{ tank.nitrite }}</i></span>
+    <span>Nitrate <i>{{ tank.nitrate }}</i></span>
     <span>on the <i>{{ post.date_posted }}</i></span>
 </div>
 {% endfor %}
