remove tests table and do everything between tanks and users

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -8,7 +8,7 @@
     <span>Ammonia <i>{{ tank.ammonia }}</i></span>
     <span>Nitrite <i>{{ tank.nitrite }}</i></span>
     <span>Nitrate <i>{{ tank.nitrate }}</i></span>
-    <span>on the <i>{{ post.date_posted }}</i></span>
+    <span>on the <i>{{ tank.date_posted }}</i></span>
 </div>
 {% endfor %}
 {% endblock body_content %}
