--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -4,11 +4,15 @@
 {% for tank in tanks %}
 <div>
     <h3>{{ tank.name }}</h3>
-    <span>test by <i>{{ tank.author }}</i></span>
+    <span><i>{{ tank.author }}</i></span>
+    <br>
     <span>Ammonia <i>{{ tank.ammonia }}</i></span>
+    <br>
     <span>Nitrite <i>{{ tank.nitrite }}</i></span>
+    <br>
     <span>Nitrate <i>{{ tank.nitrate }}</i></span>
-    <span>on the <i>{{ tank.date_posted }}</i></span>
+    <br>
+    <span>on the <i>{{ tank.date }}</i></span>
 </div>
 {% endfor %}
 {% endblock body_content %}
