--- a/application/templates/account.html
+++ b/application/templates/account.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body_content %}
-<p>users.current_user</p>
+<h1>{{form.first_name.data}} {{form.last_name.data}} </h1>
 <div class='form'>
     <form method='POST' action=''>
         {{ form.hidden_tag() }}
